# NUV

./: .gitignore  FRONTEND_GUIDE.md  README.md  docker-compose.yml
backend/: readme.md  readme.md.txt
backend/agritech_api/: .env.example  Dockerfile  Dockerfile.training  __init__.py  main.py  pyproject.toml  requirements.txt  start.py  test_auth.py  test_iot.py  test_system.py
backend/agritech_api/clients/: __init__.py  mandi_client.py  satellite_client.py  soil_client.py  thingspeak_client.py  weather_client.py
backend/agritech_api/data/: __init__.py
backend/agritech_api/ml/: models.py
backend/agritech_api/ml_models/: __init__.py  disease_model.py  irrigation_model.py  model_manager.py  price_model.py  yield_model.py
backend/agritech_api/ml_models/training/: train_models.py
backend/agritech_api/models/: __init__.py
backend/agritech_api/routers/: __init__.py  agriculture.py  auth.py  health.py  iot.py  livestock.py  market.py  schemes.py
backend/agritech_api/schemas/: __init__.py  advisory.py  agriculture.py  auth.py  common.py  crop.py  enums.py  health.py  iot.py  livestock.py  market.py  schemes.py
backend/agritech_api/services/: __init__.py  agriculture_service.py  health_service.py  livestock_service.py  market_service.py  schemes_service.py  weather_service.py
backend/agritech_api/utils/: cache.py
backend/sms/: Dockerfile  README.md  main.py  replies.json  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts
(+34 files in other folders)
