[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agritech-api"
version = "1.0.0"
description = "AgriTech API - Precision Agricultural Advisory System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "httpx==0.26.0",
    "python-multipart==0.0.6",
    "numpy==1.26.4",
    "pandas==2.2.0",
    "scikit-learn==1.4.0",
    "scipy==1.12.0",
    "joblib==1.3.2",
    "prophet==1.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agritech_api*"]

[tool.ruff]
line-length = 100
target-version = "py310"